# IMUGPS

./: README.md
.github/workflows/: azure-static-web-apps-white-bush-0e45be010.yml  serveronly_eptatelemetry.yml
EPTALAUNCHSERVER/: requirements.txt
EPTALAUNCHSERVER/backend/: db.sqlite3  manage.py
EPTALAUNCHSERVER/backend/api/: views.py
EPTALAUNCHSERVER/backend/frontend/: index.html  package.json  vite.config.js
EPTALAUNCHSERVER/backend/frontend/public/rocket_model/: Rocket.jsx  rocket.gltf
EPTALAUNCHSERVER/backend/frontend/src/: App.jsx  api.js
EPTALAUNCHSERVER/backend/frontend/src/pages/: Home.jsx  Login.jsx
EPTALAUNCHSERVER/backend/launchmonitor/: asgi.py  settings.py  urls.py  wsgi.py
EPTALAUNCHSERVER/backend/static/: index.html
EPTALAUNCHSERVER/backend/static/assets/: index-B0wNeH_-.css
EPTALAUNCHSERVER/frontend/: index.html  package-lock.json  package.json
EPTALAUNCHSERVER/frontend/src/: main.jsx
EPTALAUNCHSERVER/frontend/src/components/: Form.jsx
EPTALAUNCHSERVER/frontend/src/pages/: Home.jsx
EPTALAUNCHSERVER/frontend/src/styles/: tlwnd.css
IMUGPSBAR/: CMakeLists.txt
IMUGPSBAR/Algorithm Scheme/: Esquemático.canvas
IMUGPSBAR/include/: payload_handler.h  uNavINS.h
IMUGPSBAR/prev_test/: pld_handler.cpp  pld_handler.hpp  python_prototype.py  receiver.cpp
IMUGPSBAR/src/: main.cpp  payload_handler.cpp  uNavINS.cpp
